--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
     "dev": "nuxi dev",
     "start": "node .output/server/index.mjs"
   },
-  "dependencies": {
-    "@iconify/json": "^ 2.1.28",
-    "pinia": "^2.0.13"
-  },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.20.2",
+    "@antfu/eslint-config": "^0.20.3",
+    "@iconify/json": "^ 2.1.28",
     "@pinia/nuxt": "^0.1.8",
-    "@unocss/nuxt": "^0.31.2",
-    "@vueuse/nuxt": "^8.2.5",
+    "@unocss/nuxt": "^0.31.3",
+    "@vueuse/nuxt": "^8.2.6",
     "eslint": "^8.13.0",
-    "firebase": "^9.6.10",
+    "firebase": "^9.6.11",
+    "floating-vue": "^2.0.0-beta.15",
     "nuxt3": "latest",
+    "pinia": "^2.0.13",
     "typescript": "^4.6.3",
     "windicss": "^3.5.1"
   },
