feature: searchFunction with modal change: nuxt3 rc version

--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.20.3",
-    "@iconify/json": "^ 2.1.28",
+    "@antfu/eslint-config": "^0.20.6",
+    "@headlessui/vue": "0.0.0-insiders.591b328",
+    "@iconify/json": "^ 2.1.30",
+    "@nuxtjs/color-mode": "^3.0.2",
     "@pinia/nuxt": "^0.1.8",
-    "@unocss/nuxt": "^0.31.3",
+    "@unocss/nuxt": "^0.31.6",
     "@vueuse/nuxt": "^8.2.6",
     "eslint": "^8.13.0",
+    "fuse.js": "^6.5.3",
     "firebase": "^9.6.11",
     "floating-vue": "^2.0.0-beta.15",
+    "nuxt": "3.0.0-rc.0",
     "nuxt3": "latest",
     "pinia": "^2.0.13",
     "typescript": "^4.6.3",
