--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.20.6",
@@ -11,22 +12,15 @@
     "@iconify/json": "^ 2.1.30",
     "@nuxtjs/color-mode": "^3.0.2",
     "@pinia/nuxt": "^0.1.8",
-    "@unocss/nuxt": "^0.31.6",
-    "@vueuse/nuxt": "^8.2.6",
+    "@unocss/nuxt": "^0.31.12",
+    "@vueuse/nuxt": "^8.3.0",
     "eslint": "^8.13.0",
     "fuse.js": "^6.5.3",
     "firebase": "^9.6.11",
     "floating-vue": "^2.0.0-beta.15",
-    "nuxt": "3.0.0-rc.0",
-    "nuxt3": "latest",
+    "nuxt": "npm:nuxt3@latest",
     "pinia": "^2.0.13",
     "typescript": "^4.6.3",
     "windicss": "^3.5.1"
-  },
-  "pnpm": {
-    "overrides": {
-      "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
-      "@nuxt/kit-edge": "latest"
-    }
   }
 }
