--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "private": true,
+  "packageManager": "pnpm@7.1.7",
   "scripts": {
     "build": "nuxi build",
     "dev": "nuxi dev",
     "start": "node .output/server/index.mjs",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "nuxi prepare",
+    "generate": "nuxi generate"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.20.6",
-    "@headlessui/vue": "0.0.0-insiders.591b328",
-    "@iconify/json": "^ 2.1.30",
-    "@nuxtjs/color-mode": "^3.0.2",
-    "@pinia/nuxt": "^0.1.8",
-    "@unocss/nuxt": "^0.31.12",
-    "@vueuse/nuxt": "^8.3.0",
-    "eslint": "^8.13.0",
-    "fuse.js": "^6.5.3",
-    "firebase": "^9.6.11",
-    "floating-vue": "^2.0.0-beta.15",
-    "nuxt": "npm:nuxt3@latest",
-    "pinia": "^2.0.13",
-    "typescript": "^4.6.3",
-    "windicss": "^3.5.1"
+    "@antfu/eslint-config": "^0.31.0",
+    "@formkit/auto-animate": "1.0.0-beta.5",
+    "@headlessui/vue": "^1.7.4",
+    "@iconify/json": "^2.1.139",
+    "@nuxtjs/fontaine": "^0.2.2",
+    "@nuxtjs/supabase": "^0.2.5",
+    "@pinia/nuxt": "^0.4.3",
+    "@unocss/nuxt": "^0.46.5",
+    "@vueuse/motion": "2.0.0-beta.24",
+    "@vueuse/nuxt": "^9.5.0",
+    "eslint": "^8.27.0",
+    "firebase": "^9.14.0",
+    "floating-vue": "2.0.0-beta.20",
+    "fuse.js": "^6.6.2",
+    "nuxt": "npm:nuxt3@3.0.1-rc.0-27810184.d991a55",
+    "pinia": "^2.0.23",
+    "typescript": "^4.9.3"
   }
 }
